tests/error/ptr_arg_0_size.gw
typedef void (my_func)(void arg){}
